Implement Message and Comment services
